--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.8.1",
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "md5": "^2.3.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
