--- a/.examle.env
+++ b/.examle.env
@@ -5,8 +5,8 @@ DATABASE_URL = "mysql://root:123@localhost:3306/node_m2m"
 JWT_ACCESS_SECRET = "jwt_access_secret"
 JWT_REFRESH_SECRET = "jwt_refresh_secret"
 
-MAIL_HOST="relay.k-telecom.org"
-MAIL_PORT=25
-MAIL_USER="m2m_server"
-MAIL_PASS="5p7i2V"
-MAIL_FROM = "m2m_server@k-telecom.org"
+MAIL_HOST=""
+MAIL_PORT=228
+MAIL_USER=""
+MAIL_PASS=""
+MAIL_FROM = ""
