--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
