--- a/.example.env
+++ b/.example.env
@@ -1,12 +1,12 @@
 APP_PORT = 5000
 
-DATABASE_URL = "mysql://root:123@localhost:3306/node_m2m"
+DATABASE_URL = "mysql://login:password@localhost:3306/database"
 
 JWT_ACCESS_SECRET = "jwt_access_secret"
 JWT_REFRESH_SECRET = "jwt_refresh_secret"
 
 MAIL_HOST=""
-MAIL_PORT=228
+MAIL_PORT=1488
 MAIL_USER=""
 MAIL_PASS=""
 MAIL_FROM = ""
