--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,6 @@
-APP_PORT = 5000
+APP_PORT = 3000
 
-DATABASE_URL = "mysql://login:password@localhost:3306/database"
+DATABASE_URL = "postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
 
 JWT_ACCESS_SECRET = "jwt_access_secret"
 JWT_REFRESH_SECRET = "jwt_refresh_secret"
