--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,6 @@
 APP_PORT = 3000
 
-DATABASE_URL = "postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
+DATABASE_URL = "postgresql://postgres:postgres@localhost:5432/TEST_DB?schema=public"
 
 JWT_ACCESS_SECRET = "jwt_access_secret"
 JWT_REFRESH_SECRET = "jwt_refresh_secret"
