--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
