--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "expo": "^48.0.19",
+    "expo-device": "~5.2.1",
+    "expo-notifications": "~0.18.1",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
