data correct timestamp

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
-APP_PORT = 3000
+APP_PORT = 5000
+APP_HOST = localhost
 
 DATABASE_URL = "postgresql://postgres:postgres@localhost:5432/TEST_DB?schema=public"
 
@@ -10,3 +11,6 @@ MAIL_PORT=1488
 MAIL_USER=""
 MAIL_PASS=""
 MAIL_FROM = ""
+
+PUSH_HOST = "localhost"
+PUSH_PORT = 1488
