--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "prod": "prisma migrate deploy && npm run start"
+    "prod": "prisma migrate deploy && npm run start",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,12 @@
   "dependencies": {
     "@prisma/client": "^4.8.1",
     "ajv": "^8.12.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "expo": "^48.0.19",
+    "expo": "^44.0.6",
     "expo-device": "~5.2.1",
-    "expo-notifications": "~0.18.1",
+    "expo-notifications": "^0.20.1",
     "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
@@ -30,7 +32,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
     "prisma": "^4.13.0"
   }
 }
