--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
+    "prisma": "^5.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "nodemon": "^3.0.1",
-    "prisma": "^4.13.0"
+    "nodemon": "^3.0.1"
   }
 }
